# wfir

./: .gitignore  CONTEXT.md  DESIGN.md  README.md  example.json  pyproject.toml  test.py
.cursor/rules/: context.md  project.md
api/: main.py  pyproject.toml
ui/: package-lock.json  package.json
ui/src/: App.tsx  ContextMenu.tsx  NodeConfigDrawer.tsx  api.ts  index.css  rjsf-theme.tsx
ui/src/components/ui/: button.tsx  input.tsx  select.tsx  textarea.tsx
wfir/: main.py  pyproject.toml
wfir/src/tests/: test_generics.py  test_integration.py  test_llm_node.py  test_runner_unit.py
wfir/src/wfir/: cli.py  models.py  runner.py  verifier.py
wfir/src/wfir/compiler/: base.py  generator.py
wfir/src/wfir/compiler/langgraph/: transpiler.py
wfir/src/wfir/compiler/langgraph/templates/: node.py.j2  workflow.py.j2
wfir/src/wfir/compiler/templates/: workflow.py.j2
wfir/src/wfir/runtime/: base.py  llm.py  nodes.py  registry.py
