[project]
name = "wfir-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grandalf>=0.8",
    "langgraph>=1.0.3",
    "wfir",
]

[tool.uv.workspace]
members = [
    # "ui",
    "api",
    "wfir",
    "playground",
]

[tool.uv.sources]
wfir = { workspace = true }
