[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wfir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "openai>=2.8.1",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.5",
]

[project.scripts]
wfir = "wfir.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wfir"]
